fix height of load service button on firefox

--- a/public/styles/app.less
+++ b/public/styles/app.less
@@ -231,6 +231,7 @@ h1, h2, h3, h4, h5, h6 {
     color: @link-color;
   	.gradient(@list-color);
   	font: bold 15px/62px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  	height: 62px;
     display:block;
     text-align: center;
     text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);
